# shift

./: .env  Dockerfile  README.md  pyproject.toml
shifttask/: dependencies.py  main.py  models.py  utils.py
shifttask/api/endpoints/: __init__.py  auth.py  salary.py
shifttask/repositories/: users.py
tests/: test_main.py
