[tool.poetry]
name = "shifttask"
version = "0.1.0"
description = ""
authors = ["bigit22 <koresh.yar@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.14,<0.116.0"
uvicorn = ">=0.35.0,<0.36.0"
python-jose = {version = ">=3.5.0,<4.0.0"}
python-multipart = ">=0.0.20,<0.0.21"
pytest = "^8.4.1"
httpx = ">=0.28.1,<0.29.0"
bcrypt = ">=4.3.0,<5.0.0"
load-dotenv = ">=0.1.0,<0.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"